--- a/novo.html
+++ b/novo.html
@@ -103,7 +103,7 @@
 
             <div><button onclick="topFunction()" id="myBtn" title="Go to top">^</button></div>
 
-            <div style="width: 100%;"><img src="pexels-tarek-shahin-12428350.jpg" alt=""></div>
+            <div style="width: 100%;"><img src="./pexels-tarek-shahin-12428350.jpg" alt=""></div>
 
             <div class="txt1 center text-center" style="font-size: 35px; width: 100%; margin-top: 80px;"><p>Пронајдете го мирисот на вашиот потпис.</p></div>
     
@@ -112,7 +112,7 @@
             <section style="margin-top: 80px; background-color: #333333" class="opium"> 
                 <div class="sliki | center">
                     <div class="ri">
-                        <img src="./crno.webp" alt="riri">
+                        <img src="../crno.webp" alt="riri">
                     </div>
                     <div class="ri text-center">
                         <div><p class="pi center text-center">Ив Сен Лоран</p></div>
@@ -120,7 +120,7 @@
                         <hr class="below0" color="grey" width="80%">
                     </div>
                     <div class="ri">
-                        <img src="./black.jpg" alt="riri" height="100%">
+                        <img src="../black.jpg" alt="riri" height="100%">
                     </div>
                 </div>
             </section>
