--- a/novo.html
+++ b/novo.html
@@ -112,7 +112,7 @@
             <section style="margin-top: 80px; background-color: #333333" class="opium"> 
                 <div class="sliki | center">
                     <div class="ri">
-                        <img src="../crno.webp" alt="riri">
+                        <img src="./crno.Microsoft Edge HTML Document" alt="riri">
                     </div>
                     <div class="ri text-center">
                         <div><p class="pi center text-center">Ив Сен Лоран</p></div>
