--- a/novo.html
+++ b/novo.html
@@ -12,7 +12,7 @@
         <body>
                 <header>
                     <div class="primary">
-                        <div class="logo center"><img src="img/evs.Microsoft Edge HTML Document" alt="Logo"></div>
+                        <div class="logo center"><img src="img/evs.webp" alt="Logo"></div>
                         <nav class="nav-list">
                             <nav class="primary-navigacija">
                                 <ul class="nav-lists" area-label="navigation" role="list">
@@ -112,7 +112,7 @@
             <section style="margin-top: 80px; background-color: #333333" class="opium"> 
                 <div class="sliki | center">
                     <div class="ri">
-                        <img src="./crno.Microsoft Edge HTML Document" alt="riri">
+                        <img src="./crno.webp" alt="riri">
                     </div>
                     <div class="ri text-center">
                         <div><p class="pi center text-center">Ив Сен Лоран</p></div>
@@ -120,7 +120,7 @@
                         <hr class="below0" color="grey" width="80%">
                     </div>
                     <div class="ri">
-                        <img src="../black.jpg" alt="riri" height="100%">
+                        <img src="./black.jpg" alt="riri" height="100%">
                     </div>
                 </div>
             </section>
@@ -131,7 +131,7 @@
             <section style="margin-top: 80px; width: 100%; background-color: #333333" class="opium"> 
                     <div class="sliki | center">
                         <div class="ri">
-                            <img src="img/ads.webp" alt="riri">
+                            <img src="./ads.webp" alt="riri">
                         </div>
                         <div class="ri text-center">
                             <div><p class="pi center text-center">Френсис Куркџијан</p></div>
@@ -150,7 +150,7 @@
             <section style="margin-top: 80px; background-color: #333333;" class="opium"> 
                 <div class="sliki | center">
                     <div class="riri">
-                        <img src="img/613uB2c5yIL.jpg" alt="" >
+                        <img src="./613uB2c5yIL.jpg" alt="" >
                     </div>
                     <div class="ri | text-center">
                         <p class="pi center text-center">Џорџо Армани</p>
@@ -158,7 +158,7 @@
                         <hr class="below" color="grey" width="80%">
                     </div>
                     <div class="riri">
-                        <img src="img/p469176-av-23-zoom.webp" alt="riri">
+                        <img src="./p469176-av-23-zoom.webp" alt="riri">
                     </div>
                 </div>
             </section>
@@ -171,7 +171,7 @@
 
             <footer style="margin-top: 80px;">
                 <div class="footer">
-                    <div class="logo-kraj | center"><img src="img/evs.webp" alt="logo"></div>
+                    <div class="logo-kraj | center"><img src="./evs.webp" alt="logo"></div>
                     <nav class="footer-nav | center">
                         <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer" role="list">
                             <li><a href="novo.html">Почетна</a></li>
