--- a/novo.html
+++ b/novo.html
@@ -103,7 +103,7 @@
 
             <div><button onclick="topFunction()" id="myBtn" title="Go to top">^</button></div>
 
-            <div style="width: 100%;"><img src="./pexels-tarek-shahin-12428350.JPG" alt=""></div>
+            <div style="width: 100%;"><img src="./pexels-tarek-shahin-12428350.jpg" alt=""></div>
 
             <div class="txt1 center text-center" style="font-size: 35px; width: 100%; margin-top: 80px;"><p>Пронајдете го мирисот на вашиот потпис.</p></div>
     
