--- a/novo.html
+++ b/novo.html
@@ -12,7 +12,7 @@
         <body>
                 <header>
                     <div class="primary">
-                        <div class="logo center"><img src="./evs.webp" alt="Logo"></div>lsls
+                        <div class="logo center"><img src="./evs.webp" alt="Logo"></div>
                         <nav class="nav-list">
                             <nav class="primary-navigacija">
                                 <ul class="nav-lists" area-label="navigation" role="list">
