--- a/shop.html
+++ b/shop.html
@@ -13,7 +13,7 @@
 
         <header>
             <div class="primary head" style="height: 77.3px; margin-top: -80px;">
-                <div class="logo center"><img src="img/evs.webp" alt="Logo"></div>
+                <div class="logo center"><img src="./evs.webp" alt="Logo"></div>
             <nav class="nav-list">
                 <nav class="primary-navigacija">
                     <ul class="nav-lists" area-label="navigation" role="list">
@@ -105,7 +105,7 @@
         <div><button onclick="topFunction()" id="myBtn" title="Go to top">^</button></div>
         
         <div class="" style="margin-top: 80px;">
-            <img src="img/1120.webp">
+            <img src="./1120.webp">
         </div>
 
         <div class="klas text-center center" style="font-size: 35px; margin-top: 100px;"><p>Изберете го вашиот мирис.</p></div>
@@ -124,7 +124,7 @@
                             Мускусната основа се задржува на кожата, давајќи му на мирисот да остане моќ.</p>
                     </div>
                     <div class="rir">
-                        <img src="img/ev1.jpg" alt="riri">
+                        <img src="./ev1.jpg" alt="riri">
                     </div>
                 </div> 
             </section>
@@ -133,7 +133,7 @@
             <section style="margin-top: 100px; margin-bottom: 80px;" class="margi"> 
                 <div class="sliki | center" style="width: 100%;">
                     <div class="rir">
-                        <img src="img/ev3.jpg" alt="riri">
+                        <img src="./ev3.jpg" alt="riri">
                     </div>
                     <div class="margin1 course-coli text-center" style="font-size: 25px; padding: 50px; margin-bottom: 7px;" >
                         <p class="ev1 center text-center" style="font-size: 40px;">EV2</p>
@@ -144,41 +144,7 @@
             </section>
         </section>
 
-        <div class="klas text-center center" style="font-size: 35px; margin-top: 100px;"><p>Рејтинг</p></div>
-            <div class="fafa center text-center">
-                    <h2>EV1</h2>
-                    <style>
-                        .checked {
-                            color: darkred;
-                        }
-                    </style>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-            </div>
-            <div class="fafa center text-center">
-                    <h2>EV2</h2>
-                    <style>
-                        .fafa {
-                            justify-content: center;
-                            border: 1px solid;
-                            font-size: 18px;
-                            display: flex;
-                        }
-                        .checked {
-                            color: darkred;
-                        }
-                    </style>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-            </div>
-
-            <div class="post center" style="display: flex; margin-top: 20px;">
+            <div class="post center" style="display: flex; margin-top: 60px;">
                 <input class="enter center" style="width: 100%;" type="text" id="comment-box" placeholder="Enter comment">
                 <button class="center" id="post">Post</button>
             </div> 
@@ -190,7 +156,7 @@
 
             <footer>
                 <div class="footer">
-                    <div class="logo-kraj | center"><img src="img/evs.webp" alt="logo"></div>
+                    <div class="logo-kraj | center"><img src="./evs.webp" alt="logo"></div>
                     <nav class="footer-nav | center">
                         <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer" role="list">
                             <li><a href="novo.html">Почетна</a></li>
