--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <body>
             <header>
             <div class="primary head" style="height: 77.3px;">
-                <div class="logo center"><img src="img/evs.webp" alt="Logo"></div>
+                <div class="logo center"><img src="./evs.webp" alt="Logo"></div>
                 <nav class="nav-list">
                     <nav class="primary-navigacija">
                         <ul class="nav-lists" area-label="navigation" role="list">
@@ -119,9 +119,9 @@
             </section>  
 
                 <div class="produkt4e" style="margin-left: 113px; display: flex; width: 28%; gap: 0.5rem;">
-                    <img src="img/pexels-anna-shvets-5760900.jpg" alt="">
-                    <img src="img/pexels-anna-shvets-5760897.jpg" alt="">
-                    <img src="img/pexels-anna-shvets-5760907.jpg" alt="">
+                    <img src="./pexels-anna-shvets-5760900.jpg" alt="">
+                    <img src="./pexels-anna-shvets-5760897.jpg" alt="">
+                    <img src="./pexels-anna-shvets-5760907.jpg" alt="">
                 </div>
 
             <section class="prva" style="margin-top: 80px; margin-bottom: 180px;"> 
@@ -130,12 +130,12 @@
                     <div class="row wor | center | text-center" style="gap: 1rem;">
                         <div class="course-col | text" style="display: flex; margin: auto;">
                          <h3 style="text-align: right;">Сара</h3>
-                         <img src="img/female3.svg" alt="" style="margin-left: -35px; width: 45%;">
+                         <img src="./female3.svg" alt="" style="margin-left: -35px; width: 45%;">
                          <div class="eden" style="padding-top: 50; padding-left: 5px;"><p> Ние сме водечки експерти за парфеми. Можете да бидете сигурни дека сте на најдоброто место кога купувате во The Parfume Shop.<br></p></div>
                         </div>
                         <div class="course-col minus | text" style="display: flex; margin: auto;  margin-left: -100px;">
                             <h3 style="text-align: right;">Клара</h3>
-                            <img src="img/female3.svg" alt="" style="margin-left: -35px; width: 45%;">
+                            <img src="./female3.svg" alt="" style="margin-left: -35px; width: 45%;">
                             <div class="eden" style="padding-top: 50px; padding-left: 5px;"><p> Ние го обучивме и развивме најпознатиот тим на советници за продажба во индустријата за парфеми, гордо во индустријата CFSS.<br></p></div>
                         </div>
                     </div> 
@@ -144,7 +144,7 @@
 
             <footer>
                 <div class="footer">
-                    <div class="logo-kraj | center"><img src="img/evs.webp" alt="logo"></div>
+                    <div class="logo-kraj | center"><img src="./evs.webp" alt="logo"></div>
                     <nav class="footer-nav | center"> 
                         <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer" role="list">
                             <li><a href="novo.html">Почетна</a></li>
