--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <body>
             <header>
             <div class="primary head">
-                <div class="logo center"><img src="img/evs.webp" alt="Logo"></div>
+                <div class="logo center"><img src="./evs.webp" alt="Logo"></div>
                 <nav class="nav-list">
                     <nav class="primary-navigacija">
                         <ul class="nav-lists" area-label="navigation" role="list">
@@ -135,7 +135,7 @@
             <footer>
                 <div class="footer foot" style="margin-top: 180px;">
                     <div class="logo-kraj | center">
-                         <img src="img/evs.webp" alt="logo">
+                         <img src="./evs.webp" alt="logo">
                     </div>
                     <nav class="footer-nav | center">
                         <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer" role="list">
