--- a/shop.html
+++ b/shop.html
@@ -18,7 +18,7 @@
                 <nav class="primary-navigacija">
                     <ul class="nav-lists" area-label="navigation" role="list">
                         <i class="fas" onclick="hideMenu()"></i>
-                        <li><a href="novo.html">ПOЧЕТНА </a></li>
+                        <li><a href="index.html">ПOЧЕТНА </a></li>
                             <!-- Dropdown menu -->
                             <div class="drop" style="display: inline-block;">
                             <li class="nav-item nav-item-dropdown" >
@@ -47,7 +47,7 @@
                             <nav class="primary-navigation" id="primary-navigation">
                                 <ul area-label="Primary" role="list" class="nav-list">
                                     <i class="fas" onclick="hideMenu()"></i>
-                                    <li style="padding-top: 0px;"><a href="novo.html">ПOЧЕТНА </a></li>
+                                    <li style="padding-top: 0px;"><a href="index.html">ПOЧЕТНА </a></li>
                                     <li><a href="shop.html">EVA</a></li>
                                     <li><a href="blog.html">СПИСАНИЕ</a></li>
                                     <li><a href="about.html">ЗА НАС </a></li>
@@ -159,7 +159,7 @@
                     <div class="logo-kraj | center"><img src="./evs.webp" alt="logo"></div>
                     <nav class="footer-nav | center">
                         <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer" role="list">
-                            <li><a href="novo.html">Почетна</a></li>
+                            <li><a href="index.html">Почетна</a></li>
                             <li><a href="shop.html">Продукти</a></li>
                             <li><a href="about.html">Заедница</a></li>
                             <li><a href="contact.html">Контакт</a></li>
