--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                     <nav class="primary-navigation" id="primary-navigation">
                                         <ul area-label="Primary" role="list" class="nav-list">
                                             <i class="fas" onclick="hideMenu()"></i>
-                                            <li><a href="novo.html">ПOЧЕТНА </a></li>
+                                            <li><a href="index.html">ПOЧЕТНА </a></li>
                                             <li><a href="shop.html">EVA</a></li>
                                             <li><a href="blog.html">СПИСАНИЕ</a></li>
                                             <li><a href="about.html">ЗА НАС </a></li>
