--- a/blog.html
+++ b/blog.html
@@ -175,7 +175,7 @@
                     
                         <div class="course-coli">
                              <h3 class="text-center">Feminin Pluriel</h3>
-                             <p class="text-center "> Ветровите аспекти на јасмин, блескавиот шафран ги засилуваат минералните ноти на килибарот.</p>  
+                             <p class="text-center "> Ветровите аспекти на јасмин И блескавиот шафран на овој парфем ги засилуваат минералните ноти на килибарот.</p>  
                              <div>
                                 <img src="./maison9.png" alt="">
                             </div>
@@ -246,8 +246,8 @@
                         
                         <div class="course-coli">
                             <h3 class="text-center">Eternal Spring</h3>
-                            <p class="text-center "> Арома нагласена со букет од миризливи слатки цветни, овошни и ароматични мирисни тонови кои ќе донесат светла сензација.</p>  
-                            <div>
+                            <p class="text-center "> Арома нагласена со букет од миризливи слатки цветни, овошни и ароматични мирисни тонови кои ќе донесат светла сензација во собата.</p>  
+                            <div style=" width: 90%">
                                 <img src="./zara7.jpeg" alt="">
                             </div>
                         </div>
@@ -280,8 +280,8 @@
                     <div class="poch">
                         <div class="course-coli">
                             <h3 class="text-center">Philosykos</h3>
-                            <p class="text-center "> Oтвора со светла и освежувачка арома на листовите од смоква - кои даваат сладок овошен акцент.</p>  
-                            <div>
+                            <p class="text-center "> Парфемот има мирис на светла и освежувачка арома на листовите од смоква - кои даваат сладок овошен акцент и нијанси на елеми.</p>  
+                            <div style="width: 80%">
                                 <img src="./dip1.png" alt="">
                             </div>
                         </div>
@@ -305,7 +305,7 @@
                         <div class="course-coli">
                             <h3 class="text-center">Doson</h3>
                             <p class="text-center "> Букетот од тубероза и турска роза изразува сладок вкус освежен со лист од цвет од портокал и бобинки од роза.</p>  
-                            <div>
+                            <div style="width: 90%">
                                 <img src="./dip5.png" alt="">
                             </div>
                         </div>
