--- a/shop.html
+++ b/shop.html
@@ -103,12 +103,8 @@
         </header>
 
         <div><button onclick="topFunction()" id="myBtn" title="Go to top">^</button></div>
-        
-        <div class="" style="margin-top: 80px;">
-            <img src="./1120.webp">
-        </div>
 
-        <div class="klas text-center center" style="font-size: 35px; margin-top: 100px;"><p>Изберете го вашиот мирис.</p></div>
+        <div class="klas text-center center" style="font-size: 35px; margin-top: 80px;"><p style="margin-top: 100px;">Изберете го вашиот мирис.</p></div>
         <div class="klasaev" style="width: 100%; display: flex; justify-content: center; gap: 25px; font-size: 34px; padding: 5px;">
             <div class="course-col" style="text-align: center;">EV1</div>
             <div class="course-col" style="text-align: center;">EV2</div>
